--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "tbc";
+  src: url("Font/file.woff2");
+}
 html,
 body {
   width: 100%;
@@ -5,12 +9,12 @@ body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  font-family: "tbc";
 }
-
 /* Header*/
 
 .Header_Fixed_Navbar {
-  background-color: rgba(0, 0, 0, 0.868);
+  background-color: rgba(0, 0, 0, 0.866);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,15 +27,15 @@ body {
     width: 90%;
     display: flex;
     justify-content: space-around;
+    max-width: 1400px;
 }
 .Logo_x_Academy {
   display: flex;
   align-items: center;
   text-decoration: none;
   color: white;
-  font-family: sans-serif;
   line-height: 80px;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -44,19 +48,17 @@ body {
 .Main_Navigation a {
   text-decoration: none;
   color: white;
-  font-family: sans-serif;
   line-height: 80px;
   font-size: 15px;
   transition: 0.2s all ease-in-out;
-  text-shadow: 0px 0px 1px white;
   padding-right: 40px;
+  font-weight: 100;
 }
 .Main_Navigation a:hover {
   color: rgb(95, 170, 245);
 }
 .Academy_Text {
   color: white;
-  font-family: sans-serif;
   padding-top: 10px;
   font-size: 125%;
 }
@@ -64,19 +66,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   cursor: pointer;
   z-index: 50;
 }
 .shortline {
-  width: 23px;
-  height: 10px;
+  width: 35px;
+  padding: 5px;
 }
 .bigline {
-  width: 40px;
-  height: 10px;
+  width: 70px;
 }
-
+.short2{
+  padding-left: 35px;
+}
 /* Header*/
 
 
@@ -92,7 +94,7 @@ body {
 .Background_Content {
   width: 100%;
   height: 375px;
-  background: url(img/Meeting_Background.webp);
+  background: url(img/Cources/Meeting_Background.webp);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -101,10 +103,10 @@ body {
 }
 .TBC_x_USAID_Text {
   display: flex;
-  font-family: sans-serif;
   font-weight: bold;
   color: white;
   width: 65%;
+  max-width: 1000px;
 }
 .middle {
   display: flex;
@@ -127,17 +129,16 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  max-width: 1050px;
 }
 .Edu_paragraph {
   max-width: 100%;
   letter-spacing: 2px;
-  font-family: sans-serif;
   line-height: 1.5;
 }
 .More {
   text-decoration: none;
   color: rgb(95, 170, 245);
-  font-family: sans-serif;
   font-size: 22px;
   padding-bottom: 40px;
   transition: 0.2s all ease-in-out;
@@ -155,10 +156,10 @@ body {
 .Cources_Title{
     width: 65%;
     display: flex;
+    max-width: 980px;
 }
 .Cources_Title_txt{
     color: white;
-    font-family: sans-serif;
     font-size: 28px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -170,6 +171,74 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     padding: 10px;
+    max-width: 1200px;
+}
+
+
+
+/*slider*/
+.partners-slider {
+  padding-top: 70px ;
+  padding-bottom: 70px ;
+  width: 100%;
+  display: flex;
+  gap: 50px;
+  position: relative;
+  background-color: rgb(38, 38, 38);;
+  align-items: center;
+  justify-content: center;
+
+}
+.slider_Alignment{
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  max-width: 900px;
+}
+.partners-slider h2 {
+  font-weight: 100;
+}
+.partners-list {
+  display: flex;
+  gap: 16%;
+  justify-content: center;
+  align-items: center;
+}
+.partners-slider .partner-logo {
+  width: auto;
+  height: auto;
+}
+
+.left-arrow,
+.right-arrow {
+  border: none;
+  background: transparent;
+  width: 60px;
+  height: 90px;
+  position: absolute;
+  top: 50%;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+.right-arrow {
+  right: 10%;
+}
+.left-arrow {
+  left: 10%;
+}
+.Partners_text{
+  color: white;
+}
+
+
+
+
+
+.Questions{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 /* Main*/
 
@@ -242,9 +311,11 @@ body {
   .Mobile_Dropdown_Menu {
     padding-right: 5%;
   }
-
   .Logo_x_Academy {
     padding-left: 5%;
+  }
+  .partners-list {
+    flex-direction: column;
   }
 }
 
