--- a/style.css
+++ b/style.css
@@ -234,11 +234,148 @@ body {
 
 
 
-.Questions{
+.Frequently_Asked_questions{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: auto;
+  background-color: rgb(23, 22, 22);
+  font-family: 'tbc';
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.Questions_alignment{
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+}
+.Questions_TItle{
+  color: white;
+  font-size: 25px;
+}
+.all_questions{
+  text-decoration: none;
+  color: rgb(95, 170, 245);
+  transition: 0.3s all ease-in-out;
+  font-weight: 600;
+  font-size: 16px;
+}
+.all_questions:hover{
+  color: rgb(199, 195, 195);
+}
+.Questions_js{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  max-width: 1000px;
+  margin-top: 10px;
+}
+.Question{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: column;
+  font-family: "tbc";
+  color: white;
+  font-size: 18px;
+  margin-top: 30px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+  cursor: pointer;
+  margin-top: 60px;
+}
+.Main_Question{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.Answe_Container{
+  width: 95%;
+  color: white;
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+}
+.PAnswer{
+  padding-left: 40px;
+}
+.DownArrow{
+  width: 10px;
+  rotate: -90deg;
+}
+
+
+
+/*Footer*/
+.Footer{
+  width: 100%;
+  height: auto;
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 1 0px;
+  background-color: rgb(27, 27, 30); 
+  justify-content: center;
+  align-items: center;
+}
+.Foot_Container{
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  max-width: 1000px;
+  font-family: 'tbc';
+}
+.foot{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+.foot_1section{
+  display: flex;
+}
+.foot_2section{
+  display: flex;
+}
+.foot_Logos{
+  width: 180px;
+}
+.foot_Logos2{
+  width: 35px;
+  padding-left: 5px;
+}
+.authority{
+  color: white;
+}
+.rules{
+  color: white;
+  text-decoration: none;
+}
+.text_us{
+  width: 160px;
+  background-color:rgb(95, 170, 245);
+  color: white;
+  border-radius: 5px;
+  height: 40px;
+  border: none;
+  font-size: 15px;
+  font-family: 'tbc';
+  transition: 0.4s all ease-in-out;
+  font-weight: 400;
+  cursor: pointer;
+}
+.text_us:hover{
+  background-color: rgb(209, 204, 204);
+  color: black;
 }
 /* Main*/
 
