--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   padding: 0;
   scroll-behavior: smooth;
   font-family: "tbc";
+  overflow-x: hidden;
 }
 /* Header*/
 
@@ -146,6 +147,9 @@ body {
 .More:hover {
   color: rgb(206, 199, 199);
 }
+
+
+/* Educational Cards*/
 .Educational_Cources{
     display: flex;
     width: 100%;
@@ -173,21 +177,55 @@ body {
     padding: 10px;
     max-width: 1200px;
 }
+.CardREwoke{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 420px;
+  border: 1px solid grey;
+  background-color: rgb(23, 22, 22);
+  border-radius: 5px;
+  margin: 20px;
+  z-index: 0;
+  padding: 0;
+}
+.ImgCard{
+  width: 100%;
+  height: 200px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.DataContainer{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  font-size: 15px;
+
+}
 
 
 
 /*slider*/
 .partners-slider {
-  padding-top: 70px ;
   padding-bottom: 70px ;
   width: 100%;
   display: flex;
-  gap: 50px;
   position: relative;
   background-color: rgb(38, 38, 38);;
-  align-items: center;
-  justify-content: center;
+  align-items: center;;
+  height: auto;
+  flex-direction: column;
 
+}
+.partners_title{
+  width: 65%;
+  display: flex;
+  justify-content: flex-start;
+  height: auto;
+  padding-bottom: 80px ;
+  max-width: 1000px;
 }
 .slider_Alignment{
   display: flex;
@@ -205,8 +243,11 @@ body {
   align-items: center;
 }
 .partners-slider .partner-logo {
-  width: auto;
+  width: 40%;
   height: auto;
+  min-width: 100px;
+  max-width: 400px;
+  padding-bottom: 15px;
 }
 
 .left-arrow,
@@ -233,7 +274,7 @@ body {
 
 
 
-
+/*Questions*/
 .Frequently_Asked_questions{
   display: flex;
   flex-direction: column;
@@ -291,6 +332,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 .Answe_Container{
   width: 95%;
@@ -306,8 +348,9 @@ body {
   padding-left: 40px;
 }
 .DownArrow{
-  width: 10px;
+  width: 15px;
   rotate: -90deg;
+  height: 15px;
 }
 
 
@@ -416,6 +459,12 @@ body {
 
 
 
+@media screen and (max-width: 1320px) {
+  .INfo_Cards{
+    width: 100%;
+  }
+}
+
 
 
 @media screen and (max-width: 801px) {
@@ -454,6 +503,37 @@ body {
   .partners-list {
     flex-direction: column;
   }
+  .INfo_Cards{
+    width: 100%;
+  }
+  .all_questions{
+    display: none;
+  }
+  .allqs2{
+    display: flex;
+    margin-top: 20px;
+  }
+  .Main_Question{
+    font-size: 14px;
+  }
+  .Questions_js{
+    width: 80%;
+  }
+  .Header_Nav_align{
+    justify-content: space-between;
+  }
+  .shortline{
+    width: 25px;
+    height: 6px;
+  }
+  .bigline{
+    width: 50px;
+    height: 8px;
+  }
+  .short2{
+    padding-left: 25px;
+  }
+
 }
 
 @media screen and (min-width: 801px) {
@@ -491,4 +571,21 @@ body {
   .Logo_x_Academy {
     padding-left: 0%;
   }
+}
+
+@media screen and (max-width: 601px) {
+.foot_Logos2{
+  width: 25px;
+}
+.foot_Logos{
+  width: 100px;
+}
+.Footer{
+  font-size: 12px;
+}
+.text_us{
+  width: 70px;
+  font-size: 10px;
+  height: 20px;
+}
 }
